--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-info/employee-info.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-info/employee-info.component.html
@@ -57,22 +57,48 @@
                 </div>
         </div>
         <div>
-                        <div class="row">
-                                <div class="col-1">
-                                        <fa-icon class="slider-icon" [icon]="faAddressCard" size="md"></fa-icon>
-                                </div>
-                                <div class="col-10">
-                                        <span class="employee-info-key">Resource Type: </span> {{ isEmployee ? 'Employee' : 'Contractor'}}
-                                </div>
+                <div class="row">
+                        <div class="col-1">
+                                <fa-icon class="slider-icon" [icon]="faAddressCard" size="md"></fa-icon>
+                        </div>
+                        <div class="col-10">
+                                <span class="employee-info-key">Resource Type: </span>
+                                {{ isEmployee ? 'Employee' : 'Contractor'}}
                         </div>
                 </div>
+        </div>
+        <div *ngIf="employeeInfoDetails.sourceSystemId">
+                <div class="row">
+                        <div class="col-1">
+                                <fa-icon class="slider-icon" [icon]="faSalesforce" size="md"
+                                        [styles]="{'stroke': '#0092DA', 'color': '#0092DA'}"></fa-icon>
+                        </div>
+                        <div class="col-10">
+                                <a href="https://pkglobal.my.salesforce.com/{{employeeInfoDetails.sourceSystemId}}"
+                                        target="_blank" rel="noopener">
+                                        <span class="btn-view-hyperlink">
+                                                View on Salesforce
+                                        </span>
+                                </a>
+                        </div>
+                </div>
+        </div>
         <div class="employee-manager" *ngIf="employeeInfoDetails.manager">
                 <div class="row">
                         <div class="col-1">
                                 <fa-icon class="slider-icon" [icon]="faUserCircle" size="md"></fa-icon>
                         </div>
                         <div class="col-10">
-                                <span class="employee-info-key">Manager: </span> {{employeeInfoDetails.manager}}
+                                <span class="employee-info-key">Manager: </span>
+                                <a *ngIf="employeeInfoDetails.managerEmployeeId"
+                                        href="/profile?id={{employeeInfoDetails.managerEmployeeId}}" target="_blank"
+                                        rel="noopener">
+                                        <span class="btn-view-hyperlink">
+                                                {{employeeInfoDetails.manager}}
+                                        </span>
+                                </a>
+                                <span
+                                        *ngIf="!employeeInfoDetails.managerEmployeeId">{{employeeInfoDetails.manager}}</span>
                         </div>
                 </div>
         </div>
@@ -141,6 +167,7 @@
                         </div>
                 </div>
         </div>
+
         <!-- <div class="employee-service-line">
                 <div class="row">
                         <div class="col-1">
