--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-profile/employee-profile.component.scss
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-profile/employee-profile.component.scss
@@ -15,6 +15,11 @@ $medium-screen: 500px;
   }
 }
 
+.employee-profile-container {
+  max-width: 1500px;
+  margin: auto;
+}
+
 .employee-details {
   margin: 0 5%;
 }
