--- a/PKonnect/PKonnect.UI/ClientApp/src/app/shared/shared/nav-bar/nav-bar.component.scss
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/shared/shared/nav-bar/nav-bar.component.scss
@@ -137,6 +137,10 @@ $color-white: #ffffff;
   @media screen and (max-width: 950px) {
     width: 230px;
   }
+
+  @media screen and (max-width: 350px) {
+    width: 200px;
+  }
 }
 
 .mat-form-field {
