--- a/PKonnect/PKonnect.UI/ClientApp/src/app/shared/shared/nav-bar/nav-bar.component.scss
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/shared/shared/nav-bar/nav-bar.component.scss
@@ -146,9 +146,9 @@ $color-white: #ffffff;
 .mat-form-field {
   width: 100%;
   height: 44px;
-  background: $color-black-normal;
+  background: $color-white;
   border: 2px solid $color-white;
-  color: $color-white;
+  color: $color-black-normal;
   border-radius: 20px;
 
   font-style: normal;
@@ -166,11 +166,11 @@ $color-white: #ffffff;
 }
 
 .mat-input-element { 
-    caret-color: $color-white;
+    caret-color: gray;
 }
 
 .placeholder {
-    color: $color-white;
+    color: gray;
     font-style: italic;
 }
 
