--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-industry/employee-industry.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-industry/employee-industry.component.html
@@ -1,4 +1,4 @@
-<div class="employee-industry">
+<div class="employee-industry" *ngIf="industries.length > 0">
     <div class="employee-industry-title">
         <p>Industry Work</p>
     </div>
