--- a/PKonnect/PKonnect.UI/ClientApp/src/app/shared/employee/employee-search-card/employee-search-card.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/shared/employee/employee-search-card/employee-search-card.component.html
@@ -4,8 +4,11 @@
             <div class="row">
                 <div class="col-3 display-picture">
                     <div>
-                        <img class="image mx-auto my-auto d-block" [src]="displayPicture" alt="Avatar"
+                        <img [ngClass]="isNewHire ? 'image-new-hire mx-auto my-auto d-block' : 'image mx-auto my-auto d-block'" [src]="displayPicture" alt="Avatar"
                             accept="image/x-png,image/gif,image/jpeg">
+                            <div class="div-new-hire">
+                                    <span *ngIf="isNewHire" class="tag-new-hire">New Hire</span>
+                            </div>  
                     </div>
                 </div>
                 <div class="col-9 employee-details">
@@ -50,9 +53,6 @@
                         <p *ngIf="!!employee.roleDescription" matTooltip="{{employee.roleDescription}}"
                             matTooltipPosition="right">{{employee.roleDescription | truncate:250:"..."}}</p>
                     </div>
-                    <!-- Hiding View profile until view profile page is ready -->
-                    <!-- <button type="button" (click)="goToProfile(employee.resourceId)"
-                        class="btn btn-outline-secondary view-profile">View Profile</button> -->
                 </div>
             </div>
         </div>
@@ -82,21 +82,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div *ngIf="employee.resourceSkills.length > displayEmployeeSkillCount && displayEmployeeSkills.length <= displayEmployeeSkillCount"
-                    class="employee-skills-view-more d-flex flex-row-reverse">
-                    <span class="btn-view-more-skills" (click)="showMoreSkills()">
-                        <fa-icon class="slider-icon" [icon]="faChevronDown" size="sm"></fa-icon>
-                        Show More
-                    </span>
-                </div>
-
-                <div *ngIf="employee.resourceSkills.length > displayEmployeeSkillCount && displayEmployeeSkills.length > displayEmployeeSkillCount"
-                    class="employee-skills-view-more d-flex flex-row-reverse">
-                    <span class="btn-view-more-skills" (click)="showLessSkills()">
-                        <fa-icon class="slider-icon" [icon]="faChevronUp" size="sm"></fa-icon>
-                        Show Less
-                    </span>
-                </div> -->
             </div>
         </div>
     </div>
@@ -118,10 +103,6 @@
                     View Profile
                 </span>
             </a>
-            <!-- <span class="btn-view-more-skills" (click)="goToProfile(employee.employeeId)">
-                    <fa-icon class="slider-icon" [icon]="faChevronDown" size="sm"></fa-icon>
-                    View Profile
-            </span> -->
         </div>
     </div>
 </div>
