--- a/PKonnect/PKonnect.UI/ClientApp/src/app/shared/employee/employee-search-card/employee-search-card.component.scss
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/shared/employee/employee-search-card/employee-search-card.component.scss
@@ -3,43 +3,6 @@
   background: #ffffff;
   border-radius: 10px;
   padding: 15px;
-  // height: 210px;
-
-  // @media screen and (max-width: 1200px) {
-  //     height: 210px;
-  // }
-
-  // @media screen and (max-width: 990px) {
-  //     height: 230px;
-  // }
-
-  // @media screen and (max-width: 768px) {
-  //     height: 310px;
-  // }
-
-  // @media screen and (max-width: 450px) {
-  //     height: 320px;
-  // }
-
-  // @media screen and (max-width: 445px) {
-  //     height: 360px;
-  // }
-
-  // @media screen and (max-width: 430px) {
-  //     height: 330px;
-  // }
-
-  // @media screen and (max-width: 380px) {
-  //     height: 350px;
-  // }
-
-  // @media screen and (max-width: 380px) {
-  //     height: 380px;
-  // }
-
-  // @media screen and (max-width: 275px) {
-  //     height: 420px;
-  // }
 }
 
 .employee-card-show-more {
@@ -59,7 +22,7 @@
 
 .image {
   border-radius: 50%;
-  border: 3px solid #d8aa3a;
+  border: 4px solid #d8aa3a;
   width: 100px;
   height: 100px;
 
@@ -69,6 +32,50 @@
     height: 80px;
   }
 }
+
+.image-new-hire {
+  border-radius: 50%;
+  border: 4px solid #C5F3BE;
+  width: 100px;
+  height: 100px;
+
+  @media screen and (max-width: 992px) {
+    margin: 7px;
+    width: 80px;
+    height: 80px;
+  }
+}
+
+.div-new-hire {
+  display: flex;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
+
+  @media screen and (max-width: 992px) {
+    width: 80px;
+  }
+}
+
+.tag-new-hire {
+  display: inline-block;
+  color: #2E963D;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  padding: 3px 15px;
+  background-color: #C5F3BE;
+  border-radius: 20px;
+  margin: 10px 0px 5px 0px;
+
+  @media screen and (max-width: 992px) {
+    font-size: 10px;
+    margin: 5px 0px 5px 0px;
+    padding: 3px 10px;
+  }
+}
+
 
 .employee-details {
   padding-top: 10px;
