Add tool tip to resource status and coe

--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-info/employee-info.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-info/employee-info.component.html
@@ -6,7 +6,7 @@
                                 <fa-icon class="slider-icon" [icon]="faCheckCircle" size="md"
                                         [styles]="{'stroke': '#17CB6A', 'color': '#17CB6A'}"></fa-icon>
                         </div>
-                        <div class="col-10">
+                        <div class="col-10" matTooltip="{{projectComments}}" matTooltipPosition="right">
                                 <strong> {{availValue}}</strong>
                         </div>
                 </div>
@@ -116,16 +116,16 @@
                 </div>
         </div>
         <div *ngIf="employeeInfoDetails.phoneNumber">
-                        <div class="row">
-                                <div class="col-1">
-                                        <fa-icon class="slider-icon" [icon]="faPhone" size="md"></fa-icon>
-                                </div>
-                                <div class="col-10">
-                                        <span class="employee-info-key">Phone: </span>
-                                        {{employeeInfoDetails.phoneNumber}}
-                                </div>
+                <div class="row">
+                        <div class="col-1">
+                                <fa-icon class="slider-icon" [icon]="faPhone" size="md"></fa-icon>
+                        </div>
+                        <div class="col-10">
+                                <span class="employee-info-key">Phone: </span>
+                                {{employeeInfoDetails.phoneNumber}}
                         </div>
                 </div>
+        </div>
         <div class="employee-coe" *ngIf="employeeInfoDetails.coe">
                 <div class="row">
                         <div class="col-1">
@@ -133,6 +133,26 @@
                         </div>
                         <div class="col-10">
                                 <span class="employee-info-key">COE: </span> {{employeeInfoDetails.coe}}
+                        </div>
+                </div>
+        </div>
+        <div class="employee-coe" *ngIf="employeeInfoDetails.coeCore">
+                <div class="row">
+                        <div class="col-1">
+                                <fa-icon class="slider-icon" [icon]="faNewspaper" size="md"></fa-icon>
+                        </div>
+                        <div class="col-10">
+                                <span class="employee-info-key">COE Core: </span> {{employeeInfoDetails.coeCore}}
+                        </div>
+                </div>
+        </div>
+        <div class="employee-coe" *ngIf="employeeInfoDetails.discipline">
+                <div class="row">
+                        <div class="col-1">
+                                <fa-icon class="slider-icon" [icon]="faNewspaper" size="md"></fa-icon>
+                        </div>
+                        <div class="col-10">
+                                <span class="employee-info-key">Discipline: </span> {{employeeInfoDetails.discipline}}
                         </div>
                 </div>
         </div>
