--- a/PKonnect/PKonnect.UI/ClientApp/src/app/shared/employee/employee-search-card/employee-search-card.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/shared/employee/employee-search-card/employee-search-card.component.html
@@ -4,11 +4,11 @@
             <div class="row">
                 <div class="col-3 display-picture">
                     <div>
-                        <img [ngClass]="isNewHire ? 'image-new-hire mx-auto my-auto d-block' : 'image mx-auto my-auto d-block'" [src]="displayPicture" alt="Avatar"
-                            accept="image/x-png,image/gif,image/jpeg">
-                            <div class="div-new-hire">
-                                    <span *ngIf="isNewHire" class="tag-new-hire">New Hire</span>
-                            </div>  
+                        <img [ngClass]="isNewHire ? 'image-new-hire mx-auto my-auto d-block' : 'image mx-auto my-auto d-block'"
+                            [src]="displayPicture" alt="Avatar" accept="image/x-png,image/gif,image/jpeg">
+                        <div class="div-new-hire">
+                            <span *ngIf="isNewHire" class="tag-new-hire">New Hire</span>
+                        </div>
                     </div>
                 </div>
                 <div class="col-9 employee-details">
@@ -61,7 +61,8 @@
                 <span class="employee-minor-details-element">
                     <fa-icon class="slider-icon" [icon]="faCheckCircle" size="md"
                         [styles]="{'stroke': '#17CB6A', 'color': '#17CB6A'}"></fa-icon>
-                    <strong> {{!employee.onProject ? employee.onBenchReason : employee.resourceStatus}}</strong>
+                    <strong matTooltip="{{projectComments}}" matTooltipPosition="right">
+                        {{!employee.onProject ? employee.onBenchReason : employee.resourceStatus}}</strong>
                 </span>
                 <span class="employee-email employee-minor-details-element" matTooltip="Click to copy Email"
                     matTooltipPosition="right" (click)="copyEmailToClipboard(employee.email)">
@@ -97,9 +98,9 @@
     </div>
     <div class="row view-profile">
         <div class="col-md-6 offset-md-3">
-            <a href="/profile?id={{employee.employeeId}}" target="_blank" rel="noopener" >
+            <a href="/profile?id={{employee.employeeId}}" target="_blank" rel="noopener">
                 <span class="btn-view-more-skills">
-                            <fa-icon class=" slider-icon" [icon]="faChevronDown" size="sm"></fa-icon>
+                    <fa-icon class=" slider-icon" [icon]="faChevronDown" size="sm"></fa-icon>
                     View Profile
                 </span>
             </a>
