--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-skills/employee-skills.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-skills/employee-skills.component.html
@@ -3,25 +3,34 @@
         <p>Skills</p>
     </div>
     <div class="employee-skills-list">
+        <!-- Best Fit Skills -->
         <p class="employee-skills-sub-title" *ngIf="employeePrimarySkills.length > 0">Best Fit</p>
         <div class="employee-skill" *ngFor="let skill of employeeSkills">
             <p class="employee-skill-name">{{skill.skills.textName}}</p>
-            <div class="progress" matTooltip="Self Rating: {{skill.skillRating}}/5" matTooltipPosition="right">
+            <div class="progress"
+                matTooltip="Self Rating: {{skill.skillRating}}/5 & Last Used Year: {{skill.lastYearUsed}}"
+                matTooltipClass="mat-tool-tip-new-line"
+                matTooltipPosition="right">
                 <div class="progress-bar" role="progressbar" [style.width.%]="skill.skillRating*20" aria-valuenow="25"
                     aria-valuemin="0" aria-valuemax="100"></div>
             </div>
         </div>
         <div class="employee-skills-secondary" *ngIf="employeeSecondarySkills.length > 0 && displaySecondarySkill">
+            <!-- Other Fit Skills -->
             <p class="employee-skills-sub-title">Other Skills</p>
             <div class="employee-skill" *ngFor="let skill of employeeSecondarySkills">
                 <p class="employee-skill-name">{{skill.skills.textName}}</p>
-                <div class="progress" matTooltip="Self Rating: {{skill.skillRating}}/5" matTooltipPosition="right">
+                <div class="progress"
+                    matTooltip="Self Rating: {{skill.skillRating}}/5 & Last Used Year: {{skill.lastYearUsed}}"
+                    matTooltipClass="mat-tool-tip-new-line"
+                    matTooltipPosition="right">
                     <div class="progress-bar" role="progressbar" [style.width.%]="skill.skillRating*20"
                         aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
             </div>
         </div>
     </div>
+    <!-- Show More and show less -->
     <div *ngIf="(employeePrimarySkills.length > displayEmployeeSkillCount || employeeSecondarySkills.length > 0)  && !displaySecondarySkill"
         class="employee-skills-view-more d-flex flex-row-reverse">
         <span class="btn-view-more-skills" (click)="showMoreSkills()">
@@ -30,8 +39,7 @@
         </span>
     </div>
 
-    <div *ngIf="displaySecondarySkill"
-        class="employee-skills-view-more d-flex flex-row-reverse">
+    <div *ngIf="displaySecondarySkill" class="employee-skills-view-more d-flex flex-row-reverse">
         <span class="btn-view-more-skills" (click)="showLessSkills()">
             <fa-icon class="slider-icon" [icon]="faChevronUp" size="sm"></fa-icon>
             Show Less
