--- a/PKonnect/PKonnect.UI/ClientApp/src/app/shared/employee/employee-search-card/employee-search-card.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/shared/employee/employee-search-card/employee-search-card.component.html
@@ -61,7 +61,7 @@
                 <span class="employee-minor-details-element">
                     <fa-icon class="slider-icon" [icon]="faCheckCircle" size="md"
                         [styles]="{'stroke': '#17CB6A', 'color': '#17CB6A'}"></fa-icon>
-                    <strong matTooltip="{{projectComments}}" matTooltipPosition="right">
+                    <strong matTooltip="{{projectComments}}" matTooltipClass="mat-tool-tip-new-line" matTooltipPosition="right">
                         {{!employee.onProject ? employee.onBenchReason : employee.resourceStatus}}</strong>
                 </span>
                 <span class="employee-email employee-minor-details-element" matTooltip="Click to copy Email"
